# softml

./: README.md  pyproject.toml
examples/: lesson1_demo.py
softml/: __init__.py  datasets.py  eda.py  plots.py  utils.py
softml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
teenml/: __init__.py  datasets.py  eda.py  plots.py  utils.py
