
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "softml"
version = "0.1.0"
description = "Soft Tech Talks: simple teaching-friendly ML wrappers for Lesson 1 (EDA, plots, dataset creation)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Soft Tech Talks", email="contact@example.com"}]
dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "scikit-learn"
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/softml"
